[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/AnimalSprite.png" type="Texture" id=1]
[ext_resource path="res://Animal.gd" type="Script" id=2]
[ext_resource path="res://NN.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/AnimalAggr.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 2.5 )

[sub_resource type="CircleShape2D" id=1]
radius = 11.0

[node name="Animal" type="RigidBody2D" groups=["animals_group"]]
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 10.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="NN" parent="." instance=ExtResource( 3 )]

[node name="AggrSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="AggrSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggrSprite/Area2D"]
position = Vector2( 0, -11.5 )
shape = SubResource( 2 )

[node name="ActivateTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[connection signal="timeout" from="ActivateTimer" to="." method="_on_ActivateTimer_timeout"]
